--- a/myApp/vercel.json
+++ b/myApp/vercel.json
@@ -1,4 +1,11 @@
 {
+  "builds": [
+    {
+      "src": "myApp/package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "myApp/dist/myApp" }
+    }
+  ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
   ]
